--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/error.html
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/error.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th = "http://www.thymeleaf.org">
 <head th:replace = "fragments :: page_head('Error - Shopme Admin')"></head>
-<body class="d-flex flex-column h-100">
+<body class="d-flex flex-column min-vh-100">
     <div class="container-fluid" >
       <!-- navigation -->
 
