--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/error/500.html
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/error/500.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th = "http://www.thymeleaf.org" xmlns:sec = "http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head th:replace = "fragments :: page_head('Internal Server Error - Shopme')"></head>
-<body class="d-flex flex-column h-100">
+<body class="d-flex flex-column min-vh-100">
 <!-- navigation -->
 
 <div th:replace="navigation :: header_menu"></div>
