--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/settings/settings.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/settings/settings.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head th:replace="fragments :: page_head('Settings - Shopme Admin')"></head>
 <body class="d-flex flex-column h-100">
 <div class="container-fluid">
@@ -27,7 +27,7 @@
 		    <a class="nav-link" data-bs-toggle="tab" href="#mailServer" role="tab">Mail Server</a>
 		  </li>
 		  <li class="nav-item">
-		    <a class="nav-link" data-bs-toggle="tab" href="#mailTemplate" role="tab">Mail Templates</a>
+		    <a class="nav-link" data-bs-toggle="tab" href="#mailTemplates" role="tab">Mail Templates</a>
 		  </li>		  
 		</ul>
 		
@@ -42,11 +42,11 @@
 			  <div th:replace="settings/states :: content"></div>
 		  </div>
 		  <div class="tab-pane p-3" id="mailServer" role="tabpanel">
-			<h2>Mail Server</h2>
+			  <div th:replace="settings/mail_server :: content"></div>
 		  </div>
 		  <div class="tab-pane p-3" id="mailTemplates" role="tabpanel">
-			<h2>Mail Templates</h2>
-		  </div>	
+		  	<div th:replace="settings/mail_templates/mail_templates :: content"></div>
+		  </div>
 		 </div>
 	</div>
 
@@ -69,6 +69,10 @@
 	contextPath = "[[@{/}]]";
 	let csrfHeaderName = "[[${_csrf.headerName}]]";
 	let csrfValue = "[[${_csrf.token}]]";
+
+	$(document).ready(function() {
+		$("#customerVerificationContent").richText();
+	});
 
 </script>
 <script th:src="@{/js/common-form.js}"></script>
