--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/index.html
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html >
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head th:replace = "fragments :: page_head('Shopme')"></head>
-<body class="d-flex flex-column h-100">
+<body class="d-flex flex-column min-vh-100">
     <div th:replace="navigation :: header_menu"></div>
     <div th:replace="navigation :: search_nav"></div>
     <div class="container-fluid">
