--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/navigation.html
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/navigation.html
@@ -52,7 +52,7 @@
   </div>
 </div>
 
-<div th:fragment="footer_menu">
+<footer class="mt-auto py-3" th:fragment="footer_menu">
   <div>
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#bottomNavbar" aria-controls="collapeibleNavbar" aria-expanded="false" aria-label="Toggle navigation">
@@ -76,6 +76,6 @@
   <div th:fragment="footer" class="text-center m-3">
     <p>[[${COPYRIGHT}]]</p>
   </div>
-</div>
+</footer>
 </body>
 </html>
