--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/product/products_by_category.html
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/product/products_by_category.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head th:replace="fragments :: page_head(${pageTitle})"></head>
-<body>
+<body class="d-flex flex-column min-vh-100">
 <div class="container-fluid">
 	<div th:replace="navigation :: header_menu"></div>
 	<div th:replace="navigation :: search_nav"></div>
