--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/register/register_form.html
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/register/register_form.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head th:replace="fragments :: page_head(${pageTitle})"></head>
-<body class="d-flex flex-column h-100">
+<body class="d-flex flex-column min-vh-100">
 <div class="container-fluid">
 	<div th:replace="navigation :: header_menu"></div>
 	<div>&nbsp;</div>
