--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/brands/brands.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/brands/brands.html
@@ -10,7 +10,7 @@
 			<a class="fas fa-folder-plus btn btn-primary p-2 my-2" th:href="@{/brands/new}"></a>
 		</div>
 
-		<div th:replace="fragments :: search_form_and_message('/brands/page/1')"></div>
+		<div th:replace="fragments :: search_form_and_message"></div>
 
 		<div class="full-details">
 			<table class="table table-bordered table-striped table-hover table-responsive-xl">
@@ -18,7 +18,7 @@
 					<tr>
 						<th>Brand ID</th>
 						<th>Logo</th>
-						<th th:replace="fragments::column_link('/brands','name' , 'Brand Name')"></th>
+						<th th:replace="fragments::column_link('name' , 'Brand Name')"></th>
 						<th>Categories</th>
 						<th></th>
 					</tr>
@@ -27,7 +27,7 @@
 					<tr th:each="brand : ${listBrands}">
 						<td>[[${brand.id}]]</td>
 						<td>
-							<img th:src="@{${brand.logoPath}}" style="width: 100px" class="img-fluid"/>
+							<img alt="Brand Logo" th:src="@{${brand.logoPath}}" style="width: 100px" class="img-fluid"/>
 						</td>
 						<td>[[${brand.name}]]</td>
 						<td>
@@ -49,7 +49,7 @@
 
 
 	</div>
-	<div th:replace="fragments :: pagination('/brands', 'brands')"></div>
+	<div th:replace="fragments :: pagination( 'brands')"></div>
 
 	<div th:replace="modal_fragments :: confirm_modal"></div>
 
