--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/login.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/login.html
@@ -29,11 +29,12 @@
                 </div>
                 <p>Access to Shopme Control Panel</p>
 
-                <input type="email" name="email"  class="form-control my-3" placeholder="Email" required />
-
-                <input type="password" name="password"  class="form-control my-3" placeholder="Password" required />
+                    <input type="email" name="email"  class="form-control my-3" placeholder="Email" required />
+                    <input type="password" name="password"  class="form-control my-3" placeholder="Password" required />
                 <div>
-                    <input type="checkbox" name="remember-me" class="my-3"> Remember me
+                    <label>
+                        <input type="checkbox" name="remember-me" class="my-3">
+                    </label> Remember me
                 </div>
 
 
