code customer login by google account

--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/register/verify_success.html
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/register/verify_success.html
@@ -9,7 +9,8 @@
 
 	<div class="text-center">
 		<h2>Customer Verification</h2>
-		<h4>Your account was already verified, or the verification code is invalid.</h4>
+		<h4>Congratulations! Your account has been verified.</h4>
+		<p><a th:href="@{/login}">Login Now</a></p>
 	</div>
 
 	<div>&nbsp;</div>
