--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/login.html
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/login.html
@@ -7,6 +7,15 @@
 	<div>
 		<h2>Customer Login</h2>
 	</div>
+
+	<div class="mt-3">
+		<a class="btn btn-lg btn-secondary" th:href="@{/oauth2/authorization/google}">
+			<i class="fa-brands fa-google-plus"></i>
+			&nbsp;&nbsp;Continue with Google
+		</a>
+	</div>
+
+	<div>&nbsp;</div>
 	
 	<form th:action="@{/login}" method="post" class="mb-5" style="max-width: 400px; margin: 0 auto">
 		<div th:if="${param.error}">
@@ -33,7 +42,10 @@
 			</p>			
 		</div>
 	</form>
-	
+
+	<div>
+		Don't have an account? <a th:href="@{/register}"><b>Sign up</b></a>
+	</div>
 	<div>&nbsp;</div>
 	
 </div>
