--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/customer/account_form.html
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/customer/account_form.html
@@ -1,19 +1,30 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
-<head th:replace="fragments :: page_head(${pageTitle})"></head>
+<head th:replace="fragments :: page_head('Your Account Details')"></head>
 <body class="d-flex flex-column min-vh-100">
 <div class="container-fluid">
 	<div th:replace="navigation :: header_menu"></div>
 	<div>&nbsp;</div>
 
 	<div class="text-center">
-		<h2>Customer Registration</h2>
+		<h2>Your Account Details</h2>
 	</div>
+	<div>&nbsp;</div>
 
-	<form th:action="@{/create_customer}" method="post" th:object="${customer}"
-		style="max-width: 600px; margin: 0 auto"
-		onsubmit="return checkEmailUnique(this);">
+	<form th:action="@{/update_account_details}" method="post" th:object="${customer}"
+		style="max-width: 600px; margin: 0 auto">
+		<input type="hidden" th:field="*{id}" />
+	<div th:if="${message != null}" class="alert alert-success text-center">
+		[[${message}]]
+	</div>		
 	<div class="border border-secondary rounded p-3">
+		<div class="input-group row p-2">
+			<label for="email" class="col-sm-4 col-form-label">E-mail:</label>
+			<div class="col-sm-8">
+				<input type="text" th:field="*{email}" id="email" class="form-control" readonly="readonly"/>
+			</div>
+		</div>
+			
 		<div class="input-group row p-2">
 			<label class="col-sm-4 col-form-label">First Name:</label>
 			<div class="col-sm-8">
@@ -30,19 +41,12 @@
 			</div>
 		</div>
 				
-		<div class="input-group row p-2">
-			<label class="col-sm-4 col-form-label">E-mail:</label>
-			<div class="col-sm-8">
-				<input type="email" th:field="*{email}" class="form-control"
-					required="required" maxlength="45" minlength="8" />
-			</div>
-		</div>
-
+		<th:block th:if="${customer.authenticationType.name() == 'DATABASE'}">
 		<div class="input-group row p-2">
 			<label class="col-sm-4 col-form-label">Password:</label>
 			<div class="col-sm-8">
 				<input type="password" th:field="*{password}" class="form-control"
-					required="required" maxlength="15" minlength="6"
+					maxlength="15" minlength="6" placeholder="Leave this field if you dont want to change your password"
 					 />
 			</div>
 		</div>
@@ -51,11 +55,12 @@
 			<label class="col-sm-4 col-form-label">Re-type Password:</label>
 			<div class="col-sm-8">
 				<input type="password" id="confirmPassword" class="form-control"
-					required="required" maxlength="15" minlength="6"
+					maxlength="15" minlength="6"
 					oninput="checkPasswordMatch(this)"
 					 />
 			</div>
 		</div>
+		</th:block>
 		
 		<div class="input-group row p-2">
 			<label class="col-sm-4 col-form-label">Phone Number:</label>
@@ -94,7 +99,7 @@
 			<div class="col-sm-8">
 				<select class="form-control" th:field="*{country}">
 					<th:block th:each="country : ${listCountries}">
-						<option th:value="${country.id}">[[${country.name}]]</option>
+					<option th:value="${country.id}">[[${country.name}]]</option>
 					</th:block>
 				</select>
 			</div>
@@ -104,7 +109,7 @@
 			<label class="col-sm-4 col-form-label">State/Province:</label>
 			<div class="col-sm-8">
 				<input type="text" th:field="*{state}" class="form-control"
-					maxlength="45" minlength="3" list="listStates"  />
+					maxlength="45" minlength="3" list="listStates" />
 				<datalist id="listStates"></datalist>
 			</div>
 		</div>
@@ -118,37 +123,16 @@
 		</div>
 																		
 		<div class="text-center">
-			<input type="submit" value="Create Account" class="btn btn-primary" />
+			<input type="submit" value="Update" class="btn btn-primary" />
 		</div>
 	</div>
 	</form>
-	
-	<div>&nbsp;</div>
-	<div th:replace="fragments :: modal_dialog"></div>
+		
 </div>
 <div th:replace="navigation :: footer_menu"></div>
 <script type="text/javascript">
 	contextPath = "[[@{/}]]";
-	function checkEmailUnique(form) {
-		let url = contextPath + "customers/check_unique_email";
-		let customerEmail = $("#email").val();
-		let csrfValue = $("input[name='_csrf']").val();
 
-		let params = {email: customerEmail, _csrf: csrfValue};
-
-		$.post(url, params, function(response) {
-			if (response === "OK") {
-				form.submit();
-			} else if (response === "Duplicated") {
-				showWarningModal("There is another customer having the email " + customerEmail);
-			} else {
-				showErrorModal("Unknown response from server");
-			}
-		}).fail(function() {
-			showErrorModal("Could not connect to the server");
-		});
-		return false;
-	}	
 </script>
 <script type="text/javascript" th:src="@{/js/common_customer_form.js}"></script>
 </body>
