--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/product/product_detail.html
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/product/product_detail.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head th:replace="fragments :: page_head(${pageTitle})"></head>
 <body class="d-flex flex-column min-vh-100">
 <div class="container-fluid">
@@ -53,12 +53,12 @@
 				<span th:if="${product.inStock}" class="text-success"><b>In Stock</b></span>
 				<span th:unless="${product.inStock}" class="text-danger"><b>Out of Stock</b></span>
 			</div>
-			<div class="mt-2">
-				<input type="text" size="5" value="1" />
-			</div>
-			<div class="mt-3">
-				<input type="button" value="Add to Cart" class="btn btn-primary" />
-			</div>
+			<th:block th:if="${product.inStock}">
+				<div th:replace="cart/quantity_control :: quantity_control(1, ${product.id})"></div>
+				<div class="mt-3">
+					<input type="button" value="Add to Cart" id="buttonAdd2Cart" class="btn btn-primary" />
+				</div>
+			</th:block>
 		</div>
 	</div>
 <!--	description-->
@@ -87,10 +87,16 @@
 		</div>
 	</div>
 	<div th:replace="product/images_carousel :: content"></div>
+	<div th:replace="fragments :: modal_dialog"></div>
 	<div th:replace="navigation :: footer_menu"></div>
 </div>	
 </body>
 <script type="text/javascript">
+	contextPath = "[[@{/}]]";
+	let productId = "[[${product.id}]]";
+	let csrfHeaderName = "[[${_csrf.headerName}]]";
+	let csrfValue = "[[${_csrf.token}]]";
+
 	$(document).ready(function() {
 		let bigImage = $("#bigImage");
 
@@ -109,4 +115,7 @@
 		});
 	});
 </script>
+<script type="text/javascript" th:src="@{/js/quantity_control.js}"></script>
+<script type="text/javascript" th:src="@{/js/common_modal.js}"></script>
+<script type="text/javascript" th:src="@{/js/add_to_cart.js}"></script>
 </html>
