--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/fragments.html
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/fragments.html
@@ -11,7 +11,7 @@
 	<script type="text/javascript" th:src="@{/webjars/bootstrap/5.2.2/js/bootstrap.min.js}"></script>
 	<script type="text/javascript" th:src="@{/webjars/bootstrap/5.2.2/js/bootstrap.bundle.min.js}"></script>
 	<link rel="stylesheet" type="text/css" th:href="@{/fontawesome/all.css}" />
-
+	<link rel="stylesheet" th:href="@{/css/style.css}">
 </head>
 <body>
 
