--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/product/products_by_category.html
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/product/products_by_category.html
@@ -5,25 +5,7 @@
 <div class="container-fluid">
 	<div th:replace="navigation :: header_menu"></div>
 	<div th:replace="navigation :: search_nav"></div>
-	<div th:if="${listCategoryParents != null && !listCategoryParents.isEmpty()}">
-		<div class="row">
-			<div class="col">
-				<nav>
-					<ol class="breadcrumb">
-						<li class="breadcrumb-item ">
-							<a class="text-decoration-none" th:href="@{/static}">Home</a>
-						</li>
-<!--						list breadcrumb of parent category-->
-						<th:block th:each="parent : ${listCategoryParents}">
-						<li class="breadcrumb-item">
-							<a class="text-decoration-none" th:href="@{'/c/' + ${parent.alias}}">[[${parent.name}]]</a>
-						</li>
-						</th:block>
-					</ol>
-				</nav>
-			</div>
-		</div>
-	</div>
+	<div th:replace="breadcrumb :: content"></div>
 <!--	show children category-->
 	
 	<div class="row text-center">
