code  application remove product from cart

--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/static/css/style.css
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/static/css/style.css
@@ -1,4 +1,12 @@
 a{
     text-decoration: none;
 }
-
+*.icon-white{
+    color: white;
+}
+*.icon-green{
+    color: green;
+}
+*.icon-gray{
+    color: gray;
+}
