--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/cart/shopping_cart.html
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/cart/shopping_cart.html
@@ -13,9 +13,9 @@
 	<div class="row m-1">
 		<div class="col-sm-8">
 			<th:block th:each="item, status : ${cartItems}">
-			<div class="row border rounded p-1" th:with="product = ${item.product}">
+			<div class="row border rounded p-1" th:with="product = ${item.product}" th:id="'row' + ${status.count}">
 				<div class="col-1">
-					<div>[[${status.count}]]</div>
+					<div class="divCount" >[[${status.count}]]</div>
 
 				</div>
 				<div class="col-3">
@@ -42,15 +42,18 @@
 				</div>
 				<div class="col-2">
 					<div>
-						<a class="fa-solid fa-trash" href=""></a>
+						<a class="fa-solid fa-trash icon-gray linkRemove" th:href="@{'/cart/remove/' + ${product.id}}"
+						   th:rowNumber="${status.count}"
+						></a>
+
 					</div>
 				</div>
 			</div>
-			<div class="row m-1">&nbsp;</div>
+			<div class="row m-1" th:id="'blankLine' + ${status.count}" >&nbsp;</div>
 			</th:block>
 		</div>
 		
-		<div class="col-sm-4" th:unless="${#lists.isEmpty(cartItems)}">
+		<div class="col-sm-4" th:unless="${#lists.isEmpty(cartItems)}" id="sectionTotal">
 			<div>
 				<span class="h3">Estimated Total:</span>
 			</div>
@@ -64,8 +67,8 @@
 		</div>
 	</div>	
 	
-	<div class="text-center" th:if="${#lists.isEmpty(cartItems)}">
-		<h3>You have not chosen any products yet.</h3>
+	<div id="sectionEmptyCartMessage" th:class="'text-center' + ${#lists.isEmpty(cartItems) ? '' : ' d-none'}">
+		<h3>You have not chosen any products yet </h3>
 	</div>
 	
 </div>
