code customer address book listing

--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/navigation.html
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/navigation.html
@@ -62,7 +62,7 @@
             </li>
 
             <li>
-              <a class="dropdown-item" href="">Addresses</a>
+              <a class="dropdown-item" th:href="@{/address_book}">Addresses</a>
             </li>
 
             <li>
