--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/customers/customer_form.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/customers/customer_form.html
@@ -107,42 +107,14 @@
 	<div th:replace="fragments :: footer"></div>
 </div>	
 <script type="text/javascript">
-	let dropdownCountries;
-	let dropdownStates;
-	
+
 	$(document).ready(function() {
-		dropdownCountries = $("#country");
-		dropdownStates = $("#listStates");
-	
-		dropdownCountries.on("change", function() {
-			loadStates4Country();
-			$("#state").val("").focus();
-		});	
-		
-		loadStates4Country();
-		
-		$('#buttonCancel').click(function() { 
+		$('#buttonCancel').click(function() {
 			window.location = "[[@{/customers}]]";	
 		});		
 	});
 	
-	function loadStates4Country() {
-		let selectedCountry = $("#country option:selected");
-		let countryId = selectedCountry.val();
-		
-		let url = "[[@{/states/list_by_country/}]]" + countryId;
-		
-		$.get(url, function(responseJson) {
-			dropdownStates.empty();
-			
-			$.each(responseJson, function(index, state) {
-				$("<option>").val(state.name).text(state.name).appendTo(dropdownStates);
-			});
-		}).fail(function() {
-			showModalDialog("Error","Error loading states/provinces for the selected country.");
-		})	
-	}	
-	
+
 	function checkEmailUnique(form) {
 		let customerId = $("#id").val();
 		let customerEmail = $("#email").val();
@@ -167,6 +139,7 @@
 	}	
 	
 </script>
-<script th:src="@{/js/common_form.js}"></script>	
+<script th:src="@{/js/common_form.js}"></script>
+<script th:src="@{/js/common_form_country_state.js}"></script>
 </body>
 </html>
