--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/address_book/address_form.html
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/address_book/address_form.html
@@ -1,31 +1,21 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
-<head th:replace="fragments :: page_head('Your Account Details')"></head>
+<head th:replace="fragments :: page_head(${pageTitle})"></head>
 <body class="d-flex flex-column min-vh-100">
 <div class="container-fluid">
 	<div th:replace="navigation :: header_menu"></div>
-	<div>&nbsp;</div>
+	<div th:replace="navigation :: search_nav"></div>
 
 	<div class="text-center">
-		<h2>Your Account Details</h2>
+		<h2>[[${pageTitle}]]</h2>
 	</div>
 	<div>&nbsp;</div>
 
-	<form th:action="@{/update_account_details}" method="post" th:object="${customer}"
+	<form th:action="@{/address_book/save}" method="post" th:object="${address}"
 		style="max-width: 600px; margin: 0 auto">
 		<input type="hidden" th:field="*{id}" />
-		<input type="hidden" name="redirect" th:value="${param.redirect}" />
-	<div th:if="${message != null}" class="alert alert-success text-center">
-		[[${message}]]
-	</div>		
-	<div class="border border-secondary rounded p-3">
-		<div class="input-group row p-2">
-			<label for="email" class="col-sm-4 col-form-label">E-mail:</label>
-			<div class="col-sm-8">
-				<input type="text" th:field="*{email}" id="email" class="form-control" readonly="readonly"/>
-			</div>
-		</div>
-			
+		<input type="hidden" th:field="*{defaultForShipping}" />	
+	<div class="border border-secondary rounded p-3">			
 		<div class="input-group row p-2">
 			<label class="col-sm-4 col-form-label">First Name:</label>
 			<div class="col-sm-8">
@@ -40,28 +30,7 @@
 				<input type="text" th:field="*{lastName}" class="form-control"
 					required="required" maxlength="45" minlength="2" />
 			</div>
-		</div>
-				
-		<th:block th:if="${customer.authenticationType.name() == 'DATABASE'}">
-		<div class="input-group row p-2">
-			<label class="col-sm-4 col-form-label">Password:</label>
-			<div class="col-sm-8">
-				<input type="password" th:field="*{password}" class="form-control"
-					maxlength="15" minlength="6" placeholder="Leave this field if you dont want to change your password"
-					 />
-			</div>
-		</div>
-
-		<div class="input-group row p-2">
-			<label class="col-sm-4 col-form-label">Re-type Password:</label>
-			<div class="col-sm-8">
-				<input type="password" id="confirmPassword" class="form-control"
-					maxlength="15" minlength="6"
-					oninput="checkPasswordMatch(this)"
-					 />
-			</div>
-		</div>
-		</th:block>
+		</div>				
 		
 		<div class="input-group row p-2">
 			<label class="col-sm-4 col-form-label">Phone Number:</label>
@@ -91,7 +60,7 @@
 			<label class="col-sm-4 col-form-label">City:</label>
 			<div class="col-sm-8">
 				<input type="text" th:field="*{city}" class="form-control"
-					maxlength="45" minlength="2" />
+					required maxlength="45" minlength="2" />
 			</div>
 		</div>
 
@@ -119,21 +88,21 @@
 			<label class="col-sm-4 col-form-label">Postal Code:</label>
 			<div class="col-sm-8">
 				<input type="text" th:field="*{postalCode}" class="form-control"
-					maxlength="10" minlength="2" />
+					required maxlength="10" minlength="2" />
 			</div>
 		</div>
 																		
 		<div class="text-center">
-			<input type="submit" value="Update" class="btn btn-primary" />
+			<input type="submit" value="Save" class="btn btn-primary" />
 		</div>
 	</div>
 	</form>
-		
+	
+	<div>&nbsp;</div>	
 </div>
 <div th:replace="navigation :: footer_menu"></div>
 <script type="text/javascript">
 	contextPath = "[[@{/}]]";
-
 </script>
 <script type="text/javascript" th:src="@{/js/common_customer_form.js}"></script>
 </body>
